[gd_scene load_steps=3 format=3 uid="uid://sel0adpo13pr"]

[ext_resource type="Script" uid="uid://cvq7l7c411yqc" path="res://scenes/components/perk.gd" id="1_tfqi5"]
[ext_resource type="Theme" uid="uid://c7sybxxxgdo5x" path="res://assets/ui/font.tres" id="2_ptpew"]

[node name="Perk" type="Control"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.247
offset_right = -2.0
offset_bottom = -0.200012
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfqi5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(129, 73)
scale = Vector2(0.4, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_top = 23.0
offset_right = 62.0
offset_bottom = 127.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("2_ptpew")

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Moderate Damage"
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Channel divine power"
autowrap_mode = 3

[node name="EffectLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Damage"
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
size_flags_horizontal = 4

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
